--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="0; url=/templates/index.html" />
+    <meta http-equiv="refresh" content="0; url=/" />
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>Redirecting to <a href="/templates/index.html">/templates/index.html</a>...</p>
+    <p>Redirecting to <a href="/">Game Reviews Hub</a>...</p>
   </body>
 </html>
