--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="0; url=/" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>Redirecting to <a href="/">Game Reviews Hub</a>...</p>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Game Reviews</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+</head>
+<body>
+    <h1>
+        <img src="static/images/Logo.jpg" alt="Site Logo">
+        Game Reviews Hub
+    </h1>
+    
+
+    <!-- Search form -->
+    <form action="{{ url_for('index') }}" method="GET">
+        <label for="search">Search by Game Title:</label>
+        <input type="text" id="search" name="search" placeholder="Enter game title" value="{{ search_query }}">
+        <input type="submit" value="Search">
+    </form>
+
+    <div>
+        <a href="{{ url_for('add_review') }}">Add a New Review</a>
+        {% if reviews %}
+            <ul>
+            {% for review in reviews %}
+                <li>
+                    <strong class="game-title">Game:</strong> {{ review.game }}<br>
+                    <strong class="review-text">Review:</strong> {{ review.review }}<br>
+                    <strong class="game-rating">Rating:</strong> {{ review.rating }}<br><br>
+                    <a href="{{ url_for('edit_review', review_id=review['_id']) }}">Edit</a> | 
+                    <a href="{{ url_for('delete_review', review_id=review['_id']) }}" 
+                       onclick="return confirm('Are you sure you want to delete this review?')">Delete</a>
+                </li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <p>No reviews found.</p>
+        {% endif %}
+    </div>
+</body>
 </html>
